--- a/styleportafolio.css
+++ b/styleportafolio.css
@@ -307,7 +307,7 @@ p {
 .form label {
   font-size: 16px;
   font-weight: bold;
-  color: #ffcc00;
+  color: #ffffff;
   display: block;
   text-align: left;
 
@@ -332,16 +332,116 @@ p {
   transform: scale(1.05);
 }
 
+#lang-btn {
+  position: fixed;
+  top: 651px;
+  right: 90px; 
+  padding: 11px 15px;
+  background: #ffcc00;
+  color: black;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background 0.3s;
+}
+
+#lang-btn:hover {
+  background: #ff9900;
+}
+
 
 .background {
   position: absolute;
   top: 0;
   left: 0;
-  width: 110%;
-  height: 110%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   z-index: -2;
-  transition: transform 0.1s ease-out;
-
+  transition: background-image 0.5s ease-in-out;
 }
+
+.light-mode {
+  background-image: url("img/fondo1.webp");
+}
+
+.dark-mode {
+  background-image: url("img/fondo.webp");
+}
+
+#toggle-theme {
+  position: fixed;
+  top: 650px;
+  right: 35px;
+  padding: 10px 15px;
+  background: #ffcc00;
+  color: black;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background 0.3s;
+}
+
+#toggle-theme:hover {
+  background: #ff9900;
+}
+
+.dark-mode-text h1,
+.dark-mode-text h2,
+.dark-mode-text h3,
+.dark-mode-text h4,
+.dark-mode-text h5,
+.dark-mode-text p,
+.dark-mode-text footer,
+.dark-mode-text form label {
+    color: black !important;
+}
+
+.dark-mode-text .cls-1 {
+  fill: black !important;
+}
+
+.menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.menu-overlay ul {
+  list-style: none;
+  padding: 0;
+  background: #1f1f1f;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.menu-overlay li {
+  margin: 10px 0;
+}
+
+.menu-overlay a, .menu-overlay button {
+  text-decoration: none;
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  padding: 10px 20px;
+  display: block;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.menu-overlay button {
+  color: red;
+}
+
+
+
 
